--- a/dorduncuGunOdevi_GameSale/.classpath
+++ b/dorduncuGunOdevi_GameSale/.classpath
@@ -12,7 +12,7 @@
 	<classpathentry kind="lib" path="C:/Users/bigi_/.p2/pool/plugins/javax.xml.soap_1.2.0.v201005080501/lib/saaj.jar"/>
 	<classpathentry kind="lib" path="C:/Users/bigi_/.p2/pool/plugins/javax.wsdl_1.6.2.v201012040545.jar"/>
 	<classpathentry kind="lib" path="C:/Users/bigi_/.p2/pool/plugins/org.apache.commons.logging_1.2.0.v20180409-1502.jar"/>
-	<classpathentry kind="lib" path="C:/Users/bigi_/OneDrive/Belgeler/Kodlama.io/Mernis Jars/activation.jar"/>
-	<classpathentry kind="lib" path="C:/Users/bigi_/OneDrive/Belgeler/Kodlama.io/Mernis Jars/mail.jar"/>
+	<classpathentry kind="lib" path="C:/Users/bigi_/OneDrive/Belgeler/Kodlama.io/javakamp/Mernis Jars/activation.jar"/>
+	<classpathentry kind="lib" path="C:/Users/bigi_/OneDrive/Belgeler/Kodlama.io/javakamp/Mernis Jars/mail.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
