--- a/dorduncuGunOdevi_eCommerceSystem/.classpath
+++ b/dorduncuGunOdevi_eCommerceSystem/.classpath
@@ -6,5 +6,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="C:/Users/bigi_/OneDrive/Belgeler/Kodlama.io/javakamp/Mernis Jars/activation.jar"/>
+	<classpathentry kind="lib" path="C:/Users/bigi_/OneDrive/Belgeler/Kodlama.io/javakamp/Mernis Jars/mail.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
